--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@mui/x-date-pickers": "^6.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.0"
+    "react-router-dom": "^6.21.0",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
